--- a/src/Components/HeroArea/Banner.css
+++ b/src/Components/HeroArea/Banner.css
@@ -4,3 +4,10 @@
     background-position: center;
     background-size: cover;
 }
+
+.banner-container-dark {
+    background-image: linear-gradient(rgba(4, 82, 118, 0.45), #20010ea4), url(../../assets/banner.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
